# flypanel-layout-tools

./: .gitignore  README.md  notes.txt  pyproject.toml
examples/: config_12-12_arena.toml  make_12_ring_arena.py  test.kicad_prl  test.kicad_pro
examples/led_array/: config_16x16_40mm.toml  example.py
examples/ring_layout/: config_12-12_arena.toml  teensy_arena_12-12_copy.kicad_pro
flypanel_layout_tools/: __init__.py  app.py  arena_layout_app.py  config.py  convert.py  led_array.py  led_layout_app.py  ring_layout.py
