[tool.poetry]
name = "flypanel-layout-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.2"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
toml = "^0.10.2"
click = "^8.1.7"

[tool.poetry.scripts]
flypanel-layout = "flypanel_layout_tools.app:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
